--- a/pset7/similarities/templates/index.html
+++ b/pset7/similarities/templates/index.html
@@ -3,10 +3,16 @@
 {% block body %}
 
     <div class="col">
-        <form action="/compare" enctype="multipart/form-data" method="post">
-
-            <!-- TODO -->
-
+        <form class="form" action="/compare" enctype="multipart/form-data" method="post">
+            <input type="file" name="file1">
+            <input type="file" name="file2">
+            <select name="algorithm">
+                <option value="lines" selected>Lines</option>
+                <option value="sentences">Sentences</option>
+                <option value="substrings">Substrings</option>
+            </select>
+            <input type="number" name="length" value="0" placeholder="Length (if algo is 'Length')">
+            <input type="submit" value="Compare">
         </form>
     </div>
 
